--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
         <div class="mt-10 text-center">
             <h2 class="text-2xl font-bold">Conéctate conmigo</h2>
             <div class="mt-5 flex justify-center gap-20">
-                <a href="https://www.linkedin.com/in/tu-perfil" target="_blank" class="text-blue-400 hover:underline text-2xl">LinkedIn</a>
-                <a href="https://github.com/tu-usuario" target="_blank" class="text-gray-400 hover:underline text-2xl">GitHub</a>
+                <a href="https://www.linkedin.com/in/juan-diego-rubiano-saenz-b8315a291" target="_blank" class="text-blue-400 hover:underline text-2xl">LinkedIn</a>
+                <a href="https://github.com/juanDiRS" target="_blank" class="text-gray-400 hover:underline text-2xl">GitHub</a>
             </div>
         </div> 
         </div>
