--- a/index.html
+++ b/index.html
@@ -40,12 +40,10 @@
         <div class="mt-10">
             <h2 class="text-2xl font-bold">Educación</h2>
             <div class="mt-4 grid gap-4">
-                <div class="relative group p-4 bg-gray-800 rounded-lg text-center min-h-48 overflow-hidden">
+                <div class="relative group p-4 bg-gray-800 rounded-lg text-center">
                     <p class="relative z-10 font-bold">Colegio Centro Don Bosco</p>
-                    <div class="absolute inset-0 bg-[url('DonBosco.jpg')] bg-contain opacity-0 group-hover:opacity-100 group-focus:opacity-100 transition-opacity duration-300 pointer-events-none"></div>
-                    <p class="relative z-10 opacity-0 group-hover:opacity-100 group-focus:opacity-100 transition-opacity duration-300 min-h-32 flex items-center justify-center">
-                        En este colegio aprendí lo básico en varias áreas y desarrollé habilidades que hoy en día me ayudan en mi camino profesional.
-                    </p>
+                    <div class="absolute inset-0 bg-[url('DonBosco.jpg')] bg-contain opacity-0 group-hover:opacity-100 transition-opacity duration-300"></div>
+                    <p class="relative z-2 opacity-0 group-hover:opacity-100 transition-opacity duration-300">En este colegio aprendí lo básico en varias áreas y desarrollé habilidades que hoy en día me ayudan en mi camino profesional. Durante esos años, adquirí conocimientos que me ayudaron a entender un poco más a donde quería dirigir mi enfoque profesional comenzando a realizar el Técnico industrial.</p>
                 </div>
                 <div class="relative group p-4 bg-gray-800 rounded-lg text-center">
                     <p class="relative z-10 font-bold">Colegio Francisco Jose De Caldas</p>
