cambio de iconos.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,20 @@
 
         <div class="mt-6">
             <p class="text-center text-lg">Soy un Estudiante de ingeniería de sistemas, me gusta la ciberseguridad, la investigación, las redes físicas tambien aprender cosas nuevas y diferentes. Me motiva la creación de soluciones innovadoras que mejoren la eficiencia, la seguridad y la conectividad en distintos entornos. Tengo conocimiento en desarrollo de software, redes y bases de datos, disfruto conocer nuevas tecnologías y por ahora las aplico en proyectos que se me acoplen a mis gustos para utilizarlas en resolucion de problemas del mundo real.
-
+        <div class="mt-10">
+            <h2 class="text-2xl font-bold">Lenguajes de Programación</h2>
+            <div class="mt-4 flex flex-wrap gap-4 justify-center">
+                <span class="p-4 bg-blue-500 rounded-lg">Java</span>
+                <span class="p-4 bg-green-500 rounded-lg">Python</span>
+                <span class="p-4 bg-red-500 rounded-lg">Matlab</span>
+                <span class="p-4 bg-yellow-500 rounded-lg">AWS</span>
+                <span class="p-4 bg-purple-500 rounded-lg">SQL</span>
+                <span class="p-4 bg-pink-500 rounded-lg">Kotlink</span>
+                <span class="p-4 bg-teal-500 rounded-lg">Git</span>
+                <span class="p-4 bg-green-500 rounded-lg">Simulink</span>
+                <span class="p-4 bg-red-500 rounded-lg">Power BI</span>
+            </div>
+        </div>
         <div class="mt-10">
             <h2 class="text-2xl font-bold">Mis Gustos</h2>
             <div class="mt-4 grid gap-4">
